# neural-amp-modeler-lv2

./: .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE  README.md  lv2_symbol_export.version
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
models/: BossLSTM-1x16.nam  BossLSTM-1x24.nam  BossLSTM-2x16.nam  BossLSTM-2x8.nam  BossWN-4x2x1.nam  BossWN-feather.nam  README.md
resources/: manifest.ttl.in  modgui.ttl  neural_amp_modeler.ttl.in
resources/modgui/: icon-nam.html  knob.xcf  stylesheet-nam.css
src/: CMakeLists.txt  architecture.hpp  dsp.cpp  dsp.h  get_dsp.cpp  nam_lv2.cpp  nam_plugin.cpp  nam_plugin.h  nam_plugin.hpp  wavenet.cpp
